ポートフォリオ途中経過

--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 </head>
 
 <body>
-  <h1>ポートフォリオサイト</h1>
+  <div class="header">
+    <div class="header-logo">My portfolio</div>
+    <div class="header-list">
+      <ul>
+        <li>自己紹介</li>
+        <li>趣味</li>
+
+      </ul>
+
+    </div>
+
+  </div>
+
+  <div class="me">
+    <img src="自己紹介.jpg" alt="私の写真">
+  </div>
   <script src="main.js"></script>
 </body>
 
