ポートフォリオ途中経過

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 <body>
   <div class="header">
     <div class="header-logo">My portfolio</div>
-    <div class="header-list">
-      <ul>
-        <li>自己紹介</li>
-        <li>趣味</li>
 
-      </ul>
-
+    <div class="header-Right">
+      <a class="contentB B1" href="#born">出身地 </a>
+      <a class="contentB B2" href="#high">趣味 </a>
     </div>
+
+
 
   </div>
 
