ポートフォリオ制作

--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
 <body>
   <div class="header">
     <div class="header-logo">My portfolio</div>
-
-    <div class="header-Right">
-      <a class="contentB B1" href="#born">出身地 </a>
-      <a class="contentB B2" href="#high">趣味 </a>
-    </div>
-
-
-
   </div>
 
-  <div class="me">
-    <img src="自己紹介.jpg" alt="私の写真">
+  <div class="profile">
+    <h2>自己紹介</h2>
+    <div class="about-me">
+      <img class="me" src="自己紹介.jpg" alt="私の写真">
+      <div class="list">
+
+        <br>
+        <ul>
+          <li>&spades;名前：梅川泰星</li>
+          <li>&clubs;誕生日:7/7</li>
+          <li>&hearts;出身：兵庫県芦屋市</li>
+          <li>&diams;大学：法政大学</li>
+        </ul>
+
+      </div>
+    </div>
   </div>
   <script src="main.js"></script>
 </body>
