ポートフォリオ

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <div class="profile">
     <h2>自己紹介</h2>
     <div class="about-me">
-      <img class="me" src="自己紹介.jpg" alt="私の写真">
+      <div class="me">
+        <img src="images/自己紹介.jpg" alt="私の写真" />
+      </div>
       <div class="list">
-
+        <br />
         <br>
         <ul>
           <li>&spades;名前：梅川泰星</li>
@@ -28,10 +30,34 @@
           <li>&hearts;出身：兵庫県芦屋市</li>
           <li>&diams;大学：法政大学</li>
         </ul>
-
       </div>
     </div>
   </div>
+  <h2>趣味</h2>
+  <br>
+  <div class="main">
+    <div class="hobby1">
+      <img src="images/soccer2.jpg" />
+      <p>1.SOCCER</p>
+      <h3>ポジションはキーパー以外全部やったことがあります！</h3>
+    </div>
+
+    <div class="hobby2">
+      <p>2.Travel</p>
+
+      <div class="slideshow">
+
+        <img src="images/hyosi.jpg" id="pics">
+        <h2 id="pic-title">SlideShow!</h2>
+        <button id="playButton" onclick="playSlidedeshow();">押してみて！</button>
+      </div>
+
+
+    </div>
+
+  </div>
+
+
   <script src="main.js"></script>
 </body>
 
