ポートフォリオ

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
         <h2 id="pic-title">SlideShow!</h2>
         <button id="playButton" onclick="playSlidedeshow();">押してみて！</button>
       </div>
-
-
     </div>
 
+    <div class="hobby3">
+      <p>3.Music</p>
+
+    </div>
   </div>
 
 
