ポートフォリオ

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style2.css" />
+
   <title>My Portfolio</title>
 </head>
 
@@ -55,12 +57,16 @@
 
     <div class="hobby3">
       <p>3.Music</p>
-
+      <br>
+      <h2>画像をタップ！</h2>
+      <img src="images/music1.jpg" id="targetImage">
     </div>
   </div>
 
 
   <script src="main.js"></script>
+  <script src="main2.js"></script>
+
 </body>
 
 </html>
